# ransomeye.v1.0

./: .auto-sync-test.md  .coverage  .coveragerc  .git-auto-sync.sh  .git-file-watcher.sh  .gitattributes  .gitignore  .sync-test.txt  ARCHITECTURE.md  AUDIT_REPORT.md  AUTO_SYNC_STATUS.md  CHATGPT_IMPLEMENTATION_GUIDE.md  GA_REMEDIATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  MASTER_READINESS_VALIDATION.md  OPERATIONS_MANUAL.md  PHASE_10_CORE_RUNTIME_AUDIT_REPORT.md  PHASE_11_DPI_PRODUCTION_FITNESS_REPORT.md  PHASE_12_UI_SECURITY_FITNESS_REPORT.md  PHASE_13_DATABASE_PRODUCTION_FITNESS_REPORT.md  PHASE_14_TEST_VALIDATION_FITNESS_REPORT.md  PHASE_15_FINAL_PRODUCTION_READINESS_RECONCILIATION.md  PHASE_9_PRODUCTION_ENABLEMENT_DESIGN.md  PHASE_9_STEP_1_IMPLEMENTATION.md  PHASE_9_STEP_2_IMPLEMENTATION.md  PHASE_9_STEP_2_OPERATIONAL_RUNBOOK.md  PHASE_9_STEP_3_CREDENTIAL_INVENTORY.md  PHASE_9_STEP_3_CREDENTIAL_ROTATION_LOG.json  PHASE_9_STEP_3_EVIDENCE_CHECKLIST.md  PHASE_9_STEP_3_GIT_HISTORY_AUDIT_REPORT.md  PHASE_9_STEP_3_IMPLEMENTATION.md  PHASE_9_STEP_4_EVIDENCE_CHECKLIST.md  PHASE_9_STEP_4_IMPLEMENTATION.md  PHASE_9_STEP_4_LONG_TERM_VERIFICATION.md  PHASE_9_STEP_4_OFFLINE_VERIFICATION_WALKTHROUGH.md  PHASE_A_IMPLEMENTATION.md  PHASE_D_EXECUTION_GUIDE.md  PHASE_D_QUICK_REFERENCE.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_VALIDATION_STATE.md  (+22 more)
10th_jan_promot/: .git token.txt.kate-swp  Enhancements.txt  LLM Training.txt  MISHKA Training.txt  PHASE 5 - CORRELATION ENGINE.txt  (+95 more)
services/linux-agent/: Cargo.toml  README.md
services/linux-agent/src/: main.rs
(+970 files in other folders)
